--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,390 @@
-/* место для вашего кода */
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 92px 49px 92px 51px;  
+}
+.header__links-list{
+    display: flex;
+    gap: 32px;
+}
+.header__links-list-item{
+    list-style: circle;
+}
+.header__links-list-item_no-bullit{
+    list-style: none;
+}
+.header__link{
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration: none;
+    border-bottom: 1.5px solid #000;
+}
+.header__logo{
+    display: block;
+    width: 148px;
+    height: 105px;
+    margin-left: 209px;
+    margin-right: 355px;
+}
+.header__logo-image{
+    width: 100%;
+}
+.header__links-list-item_no-bullit .header__link{
+    border: none;
+}
+
+.header__address-list{
+    list-style: none;
+}
+.header_address_link{
+    text-decoration: none;
+    border-bottom: 1.5px solid #000;
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24.3px;
+}
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #000;
+    opacity: 0.6;
+    z-index: 0;
+}
+.cover{
+    position: relative;
+    background-image:url("../images/cover.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.cover__title{
+    position: relative;
+    z-index: 1;
+    padding: 165px 50px 0px 50px;
+    line-height: 250px;  
+
+}
+.cover__text{
+    display: block;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115%; 
+    letter-spacing: 30px;
+    text-transform: uppercase;
+}
+.cover__text-center{
+    display: block;
+    text-align: center;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%; 
+    letter-spacing: 30px;
+    text-transform: uppercase;
+}
+.cover__text-right{
+    display: block;
+    text-align: right;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+}
+.cover__text-container{
+    display: flex;
+    justify-content:flex-start;
+    gap: 30px;
+} 
+.cover__text-center-container{
+    display: flex;
+    justify-content:center;
+    gap: 30px;
+    padding-right: 60px;
+} 
+.cover__text-right-container{
+    display: flex;
+    justify-content:flex-end;
+    gap: 30px;
+}
+
+.cover__description{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content:flex-start;
+    gap:78px;
+    padding: 147px 50px 62px 422px;   
+}
+.cover__description-text{
+    color: #FFF;
+    text-align: start;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; 
+    text-transform: uppercase;
+    word-spacing: 18px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+.cover__description-button{
+    background-color: transparent;
+    color: #FFF;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+    border: 1px solid #FFF;
+    padding: 12px 32px 12px 32px;
+    
+}
+.lots{
+    padding: 180px 50px 0px 50px;  
+}
+.lots__heading{
+    color: #000;
+    font-family: Raleway;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    margin-left: 40px;
+    
+}
+.lots__card-list{
+    display: flex;
+    padding-top: 74px;
+    padding-bottom: 55px;
+    gap: 25px;
+}
+.card{
+    width: 430px;
+    height: 450px;
+    text-align: start;
+}
+.card_type_film{
+    position: relative;
+    z-index: 1;
+    background-image: url("../images/card-lot-01.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.card_type_book{
+    position: relative;
+    z-index: 1;
+    background-image: url("../images/card-lot-02.jpg");
+    background-size: cover;
+    background-repeat: no-repeat; 
+}
+.card_type_picture{
+    position: relative;
+    z-index: 1;
+    background-image: url("../images/card-lot-03.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.card__title-film{
+    position: relative;
+    z-index: 1;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; 
+    text-decoration-line: underline;
+    text-transform: uppercase;
+    padding: 50px 40px 202px 40px;
+}
+.card__title-book{
+    position: relative;
+    z-index: 1;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; 
+    text-decoration-line: underline;
+    text-transform: uppercase;
+    padding: 50px 40px 30px 40px;
+
+}
+.card__title-picture{
+    position: relative;
+    z-index: 1;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; 
+    text-decoration-line: underline;
+    text-transform: uppercase;
+    padding: 50px 40px 84px 40px;
+
+}
+.card__text-film{
+    position: relative;
+    z-index: 1;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; 
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 50px;
+}
+.card__text-book{
+    position: relative;
+    z-index: 1;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; 
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 50px;
+}
+.card__text-picture{
+    position: relative;
+    z-index: 1;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; 
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 50px;
+}
+.lots__look-more-link{
+    color: #000;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 40px;
+    margin-bottom: 2px;
+}
+.about{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding: 181px 50px 0px 50px;
+}
+.logo__column{
+    padding-bottom: 248px;
+    padding-right: 25px;   
+}
+.about__logo-image{
+    width: 148px;
+    height: 114px;    
+}
+.about__logo{
+    width: 240px;
+    height: 240px;
+    background-color: #000;
+    margin-left: 95px;
+    margin-right: 95px;
+    padding: 63px 46px 63px 46px;
+    border-radius: 120px;  
+}
+.about__column{
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    
+}
+.about__title{
+    color: #000;
+    font-family: Raleway;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    padding-top:100px;
+}
+.about__text{
+    display: flex;
+    flex-direction: column;
+    color: #000;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    gap: 25px;
+}
+.footer{
+    padding: 180px 50px 90px 50px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+.footer__menu-list{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    text-align: center;
+}
+.footer__menu-list-item_active{
+    text-decoration: none;
+}
+.footer__menu-link{
+    color: #000;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration: none;
+    border-bottom: 1.5px solid #000;
+}
+.footer__menu-list-item_active .footer__menu-link{
+    border: none;
+}
+.footer__social-list{
+    display: flex;
+    width: 240px;
+    height: 48px;
+    justify-content: space-between;
+}
+.footer__social-list-item{
+    list-style: none;
+    height: 50px;
+    width: 50px;
+}
+
