--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,41 @@
+.nav-link{
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration: none;
+    border-bottom: 1.5px solid #000;
+}
+.nav-link-active{
+    border: none;
+}
+.address{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    max-width: 240px;
+    flex-shrink: 0;
+}
+.address_link{
+    text-decoration: none;
+    border-bottom: 1.5px solid #000;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24.3px;
+}
 .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 92px 49px 92px 51px;  
+}
+.header__menu{
+    flex-shrink: 0;
 }
 .header__links-list{
     display: flex;
@@ -14,42 +47,15 @@
 .header__links-list-item_no-bullit{
     list-style: none;
 }
-.header__link{
-    color: #000;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-decoration: none;
-    border-bottom: 1.5px solid #000;
-}
+
 .header__logo{
     display: block;
     width: 148px;
     height: 105px;
-    margin-left: 209px;
-    margin-right: 355px;
+    margin-right: 146px;
 }
 .header__logo-image{
     width: 100%;
-}
-.header__links-list-item_no-bullit .header__link{
-    border: none;
-}
-
-.header__address-list{
-    list-style: none;
-}
-.header_address_link{
-    text-decoration: none;
-    border-bottom: 1.5px solid #000;
-    color: #000;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24.3px;
 }
 .overlay{
     position: absolute;
@@ -78,7 +84,7 @@
 .cover__text{
     display: block;
     color: #FFF;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 100px;
     font-style: normal;
     font-weight: 700;
@@ -90,7 +96,7 @@
     display: block;
     text-align: center;
     color: #FFF;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 100px;
     font-style: normal;
     font-weight: 700;
@@ -102,7 +108,7 @@
     display: block;
     text-align: right;
     color: #FFF;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 100px;
     font-style: normal;
     font-weight: 700;
@@ -126,19 +132,23 @@
     justify-content:flex-end;
     gap: 30px;
 }
+.cover__text-right-zero{
+    letter-spacing: 0;
+}
 
 .cover__description{
     position: relative;
     z-index: 1;
     display: flex;
-    justify-content:flex-start;
+    justify-content:flex-end;
     gap:78px;
-    padding: 147px 50px 62px 422px;   
+    padding: 147px 50px 62px 422px;  
+
 }
 .cover__description-text{
     color: #FFF;
     text-align: start;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -152,7 +162,7 @@
     background-color: transparent;
     color: #FFF;
     text-align: center;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -167,7 +177,7 @@
 }
 .lots__heading{
     color: #000;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
@@ -177,120 +187,67 @@
     
 }
 .lots__card-list{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
     padding-top: 74px;
     padding-bottom: 55px;
     gap: 25px;
 }
 .card{
-    width: 430px;
-    height: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
     text-align: start;
-}
-.card_type_film{
-    position: relative;
-    z-index: 1;
-    background-image: url("../images/card-lot-01.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.card_type_book{
-    position: relative;
-    z-index: 1;
-    background-image: url("../images/card-lot-02.jpg");
     background-size: cover;
     background-repeat: no-repeat; 
+    padding: 50px 40px;
+    gap: 30px;
+    
+}
+.card__link{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+.card_type_film{
+    background-image: url("../images/card-lot-01.jpg");
+}
+.card_type_book{
+    background-image: url("../images/card-lot-02.jpg");
 }
 .card_type_picture{
-    position: relative;
-    z-index: 1;
     background-image: url("../images/card-lot-03.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
 }
-.card__title-film{
+.card__title{
     position: relative;
     z-index: 1;
     color: #FFF;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 700;
     line-height: 120%; 
     text-decoration-line: underline;
     text-transform: uppercase;
-    padding: 50px 40px 202px 40px;
-}
-.card__title-book{
-    position: relative;
-    z-index: 1;
-    color: #FFF;
-    font-family: Raleway;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; 
-    text-decoration-line: underline;
-    text-transform: uppercase;
-    padding: 50px 40px 30px 40px;
 
 }
-.card__title-picture{
+.card__text{
     position: relative;
     z-index: 1;
     color: #FFF;
-    font-family: Raleway;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; 
-    text-decoration-line: underline;
-    text-transform: uppercase;
-    padding: 50px 40px 84px 40px;
-
-}
-.card__text-film{
-    position: relative;
-    z-index: 1;
-    color: #FFF;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 120%; 
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 50px;
-}
-.card__text-book{
-    position: relative;
-    z-index: 1;
-    color: #FFF;
-    font-family: Raleway;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; 
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 50px;
-}
-.card__text-picture{
-    position: relative;
-    z-index: 1;
-    color: #FFF;
-    font-family: Raleway;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; 
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 50px;
 }
 .lots__look-more-link{
     color: #000;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -302,10 +259,11 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     padding: 181px 50px 0px 50px;
+    row-gap: 8px;
+    column-gap: 25px;
 }
 .logo__column{
-    padding-bottom: 248px;
-    padding-right: 25px;   
+    justify-self: center; 
 }
 .about__logo-image{
     width: 148px;
@@ -315,20 +273,12 @@
     width: 240px;
     height: 240px;
     background-color: #000;
-    margin-left: 95px;
-    margin-right: 95px;
     padding: 63px 46px 63px 46px;
-    border-radius: 120px;  
-}
-.about__column{
-    display: flex;
-    flex-direction: column;
-    gap: 100px;
-    
+    border-radius: 50%;  
 }
 .about__title{
     color: #000;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
@@ -338,9 +288,10 @@
 }
 .about__text{
     display: flex;
+    grid-column-start: 2;
     flex-direction: column;
     color: #000;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -353,33 +304,14 @@
     justify-content: space-between;
     
 }
-.footer__menu-list{
+.footer__links-list{
     display: flex;
     flex-direction: column;
     list-style: none;
     text-align: center;
 }
-.footer__menu-list-item_active{
-    text-decoration: none;
-}
-.footer__menu-link{
-    color: #000;
-    text-align: center;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-decoration: none;
-    border-bottom: 1.5px solid #000;
-}
-.footer__menu-list-item_active .footer__menu-link{
-    border: none;
-}
 .footer__social-list{
     display: flex;
-    width: 240px;
-    height: 48px;
     justify-content: space-between;
 }
 .footer__social-list-item{
