--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-.nav-link{
+.nav-link {
     color: #000;
     font-family: Raleway, sans-serif;
     font-size: 18px;
@@ -7,18 +7,18 @@
     line-height: normal;
     text-decoration: none;
     border-bottom: 1.5px solid #000;
-}
-.nav-link-active{
+  }
+  .nav-link-active {
     border: none;
-}
-.address{
+  }
+  .address {
     display: flex;
     flex-direction: column;
     list-style: none;
     max-width: 240px;
     flex-shrink: 0;
-}
-.address_link{
+  }
+  .address_link {
     text-decoration: none;
     border-bottom: 1.5px solid #000;
     color: #000;
@@ -27,37 +27,37 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24.3px;
-}
-.header{
+  }
+  .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 92px 49px 92px 51px;  
-}
-.header__menu{
+    padding: 92px 49px 92px 51px;
+  }
+  .header__menu {
     flex-shrink: 0;
-}
-.header__links-list{
+  }
+  .header__links-list {
     display: flex;
     gap: 32px;
-}
-.header__links-list-item{
+  }
+  .header__links-list-item {
     list-style: circle;
-}
-.header__links-list-item_no-bullit{
+  }
+  .header__links-list-item_no-bullit {
     list-style: none;
-}
-
-.header__logo{
+  }
+  
+  .header__logo {
     display: block;
     width: 148px;
     height: 105px;
     margin-right: 146px;
-}
-.header__logo-image{
+  }
+  .header__logo-image {
     width: 100%;
-}
-.overlay{
+  }
+  .overlay {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -66,48 +66,35 @@
     background-color: #000;
     opacity: 0.6;
     z-index: 0;
-}
-.cover{
+  }
+  .cover {
     position: relative;
-    background-image:url("../images/cover.jpg");
+    background-image: url("../images/cover.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-}
-.cover__title{
+  }
+  .cover__title {
     position: relative;
     z-index: 1;
     padding: 165px 50px 0px 50px;
-    line-height: 250px;  
-
-}
-.cover__text{
+    line-height: 250px;
+  }
+  .cover__text {
     display: block;
-    color: #FFF;
+    color: #fff;
     font-family: Raleway, sans-serif;
     font-size: 100px;
     font-style: normal;
     font-weight: 700;
-    line-height: 115%; 
+    line-height: 115%;
     letter-spacing: 30px;
     text-transform: uppercase;
-}
-.cover__text-center{
+  }
+  .cover__text-center {
     display: block;
     text-align: center;
-    color: #FFF;
-    font-family: Raleway, sans-serif;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 100%; 
-    letter-spacing: 30px;
-    text-transform: uppercase;
-}
-.cover__text-right{
-    display: block;
-    text-align: right;
-    color: #FFF;
+    color: #fff;
     font-family: Raleway, sans-serif;
     font-size: 100px;
     font-style: normal;
@@ -115,53 +102,64 @@
     line-height: 100%;
     letter-spacing: 30px;
     text-transform: uppercase;
-}
-.cover__text-container{
+  }
+  .cover__text-right {
+    display: block;
+    text-align: right;
+    color: #fff;
+    font-family: Raleway, sans-serif;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+  }
+  .cover__text-container {
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     gap: 30px;
-} 
-.cover__text-center-container{
+  }
+  .cover__text-center-container {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     gap: 30px;
     padding-right: 60px;
-} 
-.cover__text-right-container{
+  }
+  .cover__text-right-container {
     display: flex;
-    justify-content:flex-end;
+    justify-content: flex-end;
     gap: 30px;
-}
-.cover__text-right-zero{
+  }
+  .cover__text-right-zero {
     letter-spacing: 0;
-}
-
-.cover__description{
+  }
+  
+  .cover__description {
     position: relative;
     z-index: 1;
     display: flex;
-    justify-content:flex-end;
-    gap:78px;
-    padding: 147px 50px 62px 422px;  
-
-}
-.cover__description-text{
-    color: #FFF;
+    justify-content: flex-end;
+    gap: 78px;
+    padding: 147px 50px 62px 422px;
+  }
+  .cover__description-text {
+    color: #fff;
     text-align: start;
     font-family: Raleway, sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
-    line-height: 28px; 
+    line-height: 28px;
     text-transform: uppercase;
     word-spacing: 18px;
     padding-top: 12px;
     padding-bottom: 12px;
     white-space: nowrap;
-}
-.cover__description-button{
+  }
+  .cover__description-button {
     background-color: transparent;
-    color: #FFF;
+    color: #fff;
     text-align: center;
     font-family: Raleway, sans-serif;
     font-size: 22px;
@@ -169,15 +167,14 @@
     font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
-    border: 1px solid #FFF;
+    border: 1px solid #fff;
     padding: 12px 32px 12px 32px;
     white-space: nowrap;
-    
-}
-.lots{
-    padding: 180px 50px 0px 50px;  
-}
-.lots__heading{
+  }
+  .lots {
+    padding: 180px 50px 0px 50px;
+  }
+  .lots__heading {
     color: #000;
     font-family: Raleway, sans-serif;
     font-size: 40px;
@@ -186,68 +183,65 @@
     line-height: normal;
     text-transform: uppercase;
     margin-left: 40px;
-    
-}
-.lots__card-list{
+  }
+  .lots__card-list {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     padding-top: 74px;
     padding-bottom: 55px;
     gap: 25px;
-}
-.card{
+  }
+  .card {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     position: relative;
     text-align: start;
     background-size: cover;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
     padding: 50px 40px;
     gap: 30px;
-    
-}
-.card__link{
+  }
+  .card__link {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 10;
-}
-.card_type_film{
+  }
+  .card_type_film {
     background-image: url("../images/card-lot-01.jpg");
-}
-.card_type_book{
+  }
+  .card_type_book {
     background-image: url("../images/card-lot-02.jpg");
-}
-.card_type_picture{
+  }
+  .card_type_picture {
     background-image: url("../images/card-lot-03.jpg");
-}
-.card__title{
+  }
+  .card__title {
     position: relative;
     z-index: 1;
-    color: #FFF;
+    color: #fff;
     font-family: Raleway, sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 700;
-    line-height: 120%; 
+    line-height: 120%;
     text-decoration-line: underline;
     text-transform: uppercase;
-
-}
-.card__text{
+  }
+  .card__text {
     position: relative;
     z-index: 1;
-    color: #FFF;
+    color: #fff;
     font-family: Raleway, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 120%; 
-}
-.lots__look-more-link{
+    line-height: 120%;
+  }
+  .lots__look-more-link {
     color: #000;
     font-family: Raleway, sans-serif;
     font-size: 20px;
@@ -256,29 +250,29 @@
     line-height: normal;
     margin-left: 40px;
     margin-bottom: 2px;
-}
-.about{
+  }
+  .about {
     display: grid;
     grid-template-columns: 1fr 2fr;
     padding: 181px 50px 0px 50px;
     row-gap: 8px;
     column-gap: 25px;
-}
-.logo__column{
-    justify-self: center; 
-}
-.about__logo-image{
+  }
+  .logo__column {
+    justify-self: center;
+  }
+  .about__logo-image {
     width: 148px;
-    height: 114px;    
-}
-.about__logo{
+    height: 114px;
+  }
+  .about__logo {
     width: 240px;
     height: 240px;
     background-color: #000;
     padding: 63px 46px 63px 46px;
-    border-radius: 50%;  
-}
-.about__title{
+    border-radius: 50%;
+  }
+  .about__title {
     color: #000;
     font-family: Raleway, sans-serif;
     font-size: 40px;
@@ -286,9 +280,9 @@
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
-    padding-top:100px;
-}
-.about__text{
+    padding-top: 100px;
+  }
+  .about__text {
     display: flex;
     grid-column-start: 2;
     flex-direction: column;
@@ -299,26 +293,25 @@
     font-weight: 400;
     line-height: normal;
     gap: 25px;
-}
-.footer{
+  }
+  .footer {
     padding: 180px 50px 90px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.footer__links-list{
+  }
+  .footer__links-list {
     display: flex;
     flex-direction: column;
     list-style: none;
     text-align: center;
-}
-.footer__social-list{
+  }
+  .footer__social-list {
     display: flex;
     gap: 50px;
-}
-.footer__social-list-item{
+  }
+  .footer__social-list-item {
     list-style: none;
     height: 50px;
     width: 50px;
-}
-
+  }
