--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-.nav-link {
+  .nav-link {
     color: #000;
     font-family: Raleway, sans-serif;
     font-size: 18px;
@@ -12,15 +12,9 @@
     border: none;
   }
   .address {
-    display: flex;
-    flex-direction: column;
     list-style: none;
     max-width: 240px;
     flex-shrink: 0;
-  }
-  .address_link {
-    text-decoration: none;
-    border-bottom: 1.5px solid #000;
     color: #000;
     font-family: Raleway, sans-serif;
     font-size: 18px;
@@ -28,11 +22,15 @@
     font-weight: 400;
     line-height: 24.3px;
   }
+  .address__link {
+    text-decoration: none;
+    border-bottom: 1.5px solid #000;
+  }
   .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 92px 49px 92px 51px;
+    padding: 92px 49px 94px 51px;
   }
   .header__menu {
     flex-shrink: 0;
@@ -56,6 +54,7 @@
   }
   .header__logo-image {
     width: 100%;
+    height: 100%;
   }
   .overlay {
     position: absolute;
@@ -78,60 +77,39 @@
     position: relative;
     z-index: 1;
     padding: 165px 50px 0px 50px;
-    line-height: 250px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    color: #fff;
+    font-family: Raleway, sans-serif;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: 30px;
+    text-transform: uppercase;
   }
   .cover__text {
     display: block;
-    color: #fff;
-    font-family: Raleway, sans-serif;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 115%;
-    letter-spacing: 30px;
-    text-transform: uppercase;
-  }
-  .cover__text-center {
-    display: block;
-    text-align: center;
-    color: #fff;
-    font-family: Raleway, sans-serif;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 100%;
-    letter-spacing: 30px;
-    text-transform: uppercase;
-  }
-  .cover__text-right {
-    display: block;
-    text-align: right;
-    color: #fff;
-    font-family: Raleway, sans-serif;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 100%;
-    letter-spacing: 30px;
-    text-transform: uppercase;
   }
   .cover__text-container {
     display: flex;
-    justify-content: flex-start;
+    align-self: flex-start;
     gap: 30px;
+    line-height: 115%;
   }
   .cover__text-center-container {
     display: flex;
-    justify-content: center;
+    align-self: center;
     gap: 30px;
     padding-right: 60px;
   }
   .cover__text-right-container {
     display: flex;
-    justify-content: flex-end;
+    align-self: flex-end;
     gap: 30px;
   }
-  .cover__text-right-zero {
+  .cover__text-zero {
     letter-spacing: 0;
   }
   
@@ -141,7 +119,7 @@
     display: flex;
     justify-content: flex-end;
     gap: 78px;
-    padding: 147px 50px 62px 422px;
+    padding: 135px 50px 50px 422px;
   }
   .cover__description-text {
     color: #fff;
@@ -187,28 +165,30 @@
   .lots__card-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding-top: 74px;
-    padding-bottom: 55px;
+    padding-top: 27px;
+    padding-bottom: 30px;
     gap: 25px;
+    list-style-type: none;
+  }
+  .lots__card-item {
+    min-height: 450px;
+  }
+  .card-link {
+    display: block;
+    height: 100%;
+    text-decoration: none;
   }
   .card {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: relative;
     text-align: start;
+    gap: 30px;
+    padding: 50px 40px;
+    height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 50px 40px;
-    gap: 30px;
-  }
-  .card__link {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
   }
   .card_type_film {
     background-image: url("../images/card-lot-01.jpg");
@@ -249,16 +229,18 @@
     font-weight: 400;
     line-height: normal;
     margin-left: 40px;
-    margin-bottom: 2px;
+    padding-bottom: 2px;
+    text-decoration: none;
+    border-bottom: 1px solid black;
   }
   .about {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    padding: 181px 50px 0px 50px;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 180px 50px 0px 50px;
     row-gap: 8px;
     column-gap: 25px;
   }
-  .logo__column {
+  .about__logo-wrap {
     justify-self: center;
   }
   .about__logo-image {
@@ -272,7 +254,12 @@
     padding: 63px 46px 63px 46px;
     border-radius: 50%;
   }
+  .about__title-wrap {
+    grid-column: 2 / 4;
+    align-self: center;
+  }
   .about__title {
+    padding-top: 8px;
     color: #000;
     font-family: Raleway, sans-serif;
     font-size: 40px;
@@ -280,11 +267,10 @@
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
-    padding-top: 100px;
   }
   .about__text {
     display: flex;
-    grid-column-start: 2;
+    grid-column: 2 / 4;
     flex-direction: column;
     color: #000;
     font-family: Raleway, sans-serif;
@@ -298,7 +284,7 @@
     padding: 180px 50px 90px 50px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
   .footer__links-list {
     display: flex;
@@ -308,7 +294,7 @@
   }
   .footer__social-list {
     display: flex;
-    gap: 50px;
+    gap: 46px;
   }
   .footer__social-list-item {
     list-style: none;
